FCMC: stop jumping on hover

--- a/configs/conferences/fcmc/main.less
+++ b/configs/conferences/fcmc/main.less
@@ -28,19 +28,16 @@ html {
 
 .nav-tabs > li.active > a {
 	background-color: @yellow;
-	border-bottom: 2px solid black;
 	color: black; 
 }
 
 .nav-tabs > li.active > a:hover {
 	background-color: #c8b41e;
-	border-bottom: 2px solid black;
 	color: black; 
 }
 
 .nav-tabs > li > a:hover {
 	background-color: #c8b41e;
-	border-bottom: 2px solid black;
 	color: black; 
 }
 
